test_outputs/connlist/multiple_ingress_objects_with_different_ports_new_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
Connections between {ingress-controller} => ingressworld/ingress-world-multiple-ports[Deployment]:

Allowed connections:
	Allowed TCP:[8000] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			[Route] ingressworld/route-1 // service ingress-world

	Allowed TCP:[8090] due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Allowed)
			[Ingress] ingressworld/ingress-1 // service ingress-world

Denied connections:
	Denied TCP:[1-7999,8001-8089,8091-65535], UDP, SCTP due to the following policies and rules:
		Egress (Allowed) due to the system default (Allow all)
		Ingress (Denied)
			[Ingress] ingressworld/ingress-1 // service ingress-world (protocols/ports not referenced)
			[Route] ingressworld/route-1 // service ingress-world (protocols/ports not referenced)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => ingressworld/ingress-world-multiple-ports[Deployment]
ingressworld/ingress-world-multiple-ports[Deployment] => 0.0.0.0-255.255.255.255
